[package]
name = "snmpt2am"
version = "0.1.0"
authors = ["Haruhiko Uchida <uchida@cnci.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "^0.27"
snmp-parser = "^0.7"
chrono = "^0.4"
libc = "^0.2"
ureq = { version = "^1.5",  features = ["json", "charset"] }
serde_yaml = "^0.8"
